BASIS-38152 - Componente de exportação e view arrumados

--- a/frontend/src/app/pre-cadastro/pre-cadastro-detail.component.html
+++ b/frontend/src/app/pre-cadastro/pre-cadastro-detail.component.html
@@ -5,31 +5,31 @@
       <div class="ui-g form-group">
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="nome_do_paciente" pInputText [ngModel]="preCadastro.nome_do_paciente" readonly/>
+            <input type="text" name="nome_do_paciente" pInputText [ngModel]="preCadastro.nomeDoPaciente" readonly/>
             <label>Nome Do Paciente</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="nome_social" pInputText [ngModel]="preCadastro.nome_social" readonly/>
+            <input type="text" name="nome_social" pInputText [ngModel]="preCadastro.nomeSocial" readonly/>
             <label>Nome Social</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="nome_da_mae" pInputText [ngModel]="preCadastro.nome_da_mae" readonly/>
+            <input type="text" name="nome_da_mae" pInputText [ngModel]="preCadastro.nomeDaMae" readonly/>
             <label>Nome Da Mãe</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="data_de_nascimento" pInputText [ngModel]="preCadastro.data_de_nascimento|date:'dd/MM/y'" readonly/>
+            <input type="text" name="data_de_nascimento" pInputText [ngModel]="preCadastro.dataDeNascimento|date:'dd/MM/y'" readonly/>
             <label>Data De Nascimento</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="n_cartao_sus" pInputText [ngModel]="preCadastro.n_cartao_sus" readonly/>
+            <input type="text" name="n_cartao_sus" pInputText [ngModel]="preCadastro.numCartaoSus" readonly/>
             <label>Número do Cartão do SUS</label>
           </span>
         </div>
