--- a/frontend/src/app/botoes-exportacao/botoes-exportacao.component.html
+++ b/frontend/src/app/botoes-exportacao/botoes-exportacao.component.html
@@ -1,1 +1,2 @@
 <p-splitButton label="Exportar" icon="ui-icon-document" [model]="tiposExportacao"></p-splitButton>
+<p-panelMenu [model]="items"></p-panelMenu>
