BASIS-38138 Botao exportacao

--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
@@ -36,7 +36,7 @@
                     </p-column>
                 </basis-datatable>
                 <div class="ui-g-12 ui-md-2">
-                    <app-botoes-exportacao resourceName="unidadehospitalar">
+                    <app-botoes-exportacao resourceName="unidadehospitalar" [query]="elasticQuery.value">
                     </app-botoes-exportacao>
                 </div>
             </div>
