--- a/frontend/src/app/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pre-cadastro/pre-cadastro.component.html
@@ -6,7 +6,7 @@
                 <div class="ui-g-12 ui-md-12">
                     <span class="md-inputfield">
               <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
-                (keyup.enter)="datatable.refresh(elasticQuery.query)" />
+                (keyup.enter)="datatable.refresh(elasticQuery.query)" name="filtro"/>
 
               <label>Pesquisar</label>
             </span>
@@ -38,7 +38,7 @@
                     </p-column>
                 </basis-datatable>
                 <div class="ui-g-12 ui-md-2">
-                    <app-botoes-exportacao resourceName="precadastro">
+                    <app-botoes-exportacao resourceName="precadastro" [query]="elasticQuery.value">
                     </app-botoes-exportacao>
                 </div>
             </div>
