--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -62,7 +62,7 @@
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="unidade_de_saude" [(ngModel)]="usuario.unidade_de_saude" pInputText required/>
+              <input type="text" name="unidadeDeSaude" [(ngModel)]="usuario.unidadeDeSaude" pInputText required/>
               <label>Unidade De Saude</label>
             </span>
           </div>
