BASIS-38151 Correção no front atributo unidadeDeSaude

--- a/frontend/src/app/usuario/usuario.component.html
+++ b/frontend/src/app/usuario/usuario.component.html
@@ -25,7 +25,7 @@
                     <p-column header="Nome" field="nome"></p-column>
                     <p-column header="Login" field="login"></p-column>
                     <p-column header="Email" field="email"></p-column>
-                    <p-column header="Unidade de Saude" field="unidade_de_saude"></p-column>
+                    <p-column header="Unidade de Saude" field="unidadeDeSaude"></p-column>
                     <p-column header="Ativo" field="ativo">
                         <ng-template let-col let-ativo="rowData" pTemplate="body">
                             {{ ativo[col.field] ? 'Sim' : (ativo[col.field] != null ? 'Não' : null) }}
