--- a/frontend/src/app/usuario/usuario-detail.component.html
+++ b/frontend/src/app/usuario/usuario-detail.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="unidade_de_saude" pInputText [ngModel]="usuario.unidadeDeSaude" readonly/>
+            <input type="text" name="unidadeDeSaude" pInputText [ngModel]="usuario.unidadeDeSaude" readonly/>
             <label>Unidade De Saude</label>
           </span>
         </div>
