--- a/frontend/src/app/especialidade/especialidade-form.component.html
+++ b/frontend/src/app/especialidade/especialidade-form.component.html
@@ -13,7 +13,7 @@
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="descricao" required [(ngModel)]="especialidade.descricao" pInputText/>
+              <input type="text" name="descricao" [(ngModel)]="especialidade.descricao" pInputText/>
               <label>Descrição da Especialidade</label>
             </span>
           </div>
