BASIS-38151 Teste gateway

--- a/gateway/src/main/resources/templates/error.html
+++ b/gateway/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="shortcut icon" href="${baseUrl}/favicon.ico" />
-    <title>Your request cannot be processed 'Test'</title>
+    <title>Your request cannot be processed</title>
     <style>
         ::-moz-selection {
             background: #b3d4fc;
