BASIS-38140 Ativo Default Value Front

--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -47,10 +47,10 @@
                   <label>Ativo</label>
               </div>
               <div class="ui-g-12 ui-md-2">
-                <p-radioButton name="ativo" [value]="true" label="Sim" [(ngModel)]="usuario.ativo" checked></p-radioButton>
+                <p-radioButton name="ativo" [value]="true" label="Sim"></p-radioButton>
               </div>
               <div class="ui-g-12 ui-md-2">
-                <p-radioButton name="ativo" [value]="false" label="Não" [(ngModel)]="usuario.ativo"></p-radioButton>
+                <p-radioButton name="ativo" [value]="false" label="Não"></p-radioButton>
               </div>
             </div>
           </div>
