--- a/frontend/src/app/usuario/usuario-detail.component.html
+++ b/frontend/src/app/usuario/usuario-detail.component.html
@@ -23,7 +23,7 @@
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="perfil" pInputText [ngModel]="usuario.perfil" readonly/>
+            <input type="text" name="perfil" pInputText [ngModel]="usuario.perfil.id" readonly/>
             <label>Perfil</label>
           </span>
         </div>
