--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -29,12 +29,12 @@
               <label>Email</label>
             </span>
           </div>
-          <div class="ui-g-12 ui-md-6">
+          <!-- <div class="ui-g-12 ui-md-6">
             <p-dropdown [options]="perfils" optionLabel="id" placeholder="Perfis" name="perfil" [(ngModel)]="usuario.perfil" [autoWidth]="false" dataKey="id"></p-dropdown>
           </div>
           <div class="ui-g-12 ui-md-6">
             <p-dropdown [options]="unidade_de_saude" optionLabel="id" placeholder="Unidades de Saude" name="unidade_de_saude" [(ngModel)]="usuario.unidade_de_saude" [autoWidth]="false" dataKey="id"></p-dropdown>
-          </div>
+          </div> -->
           <div class="ui-g-12 ui-md-6">
               <div class="ui-g">
                 <div class="ui-g-12 ui-md-2">
