BASIS-38151 Alteração em front e back gateway

--- a/frontend/src/app/especialidade/especialidade-form.component.html
+++ b/frontend/src/app/especialidade/especialidade-form.component.html
@@ -14,7 +14,7 @@
           <div class="ui-g-12 ui-md-12">
             <span class="md-inputfield">
             <label>Descrição da Especialidade</label> <br>
-              <textarea [rows]="12" [cols]="67" name="descricao"  pInputTextarea [(ngModel)]="especialidade.descricao"></textarea>
+              <textarea [rows]="12" [cols]="67" name="descricao"  pInputTextarea [(ngModel)]="especialidade.descricao" maxlength="250"></textarea>
             </span>
           </div>
         </div>
