--- a/frontend/src/app/especialidade/especialidade.component.html
+++ b/frontend/src/app/especialidade/especialidade.component.html
@@ -6,7 +6,7 @@
         <div class="ui-g-12 ui-md-12">
             <span class="md-inputfield">
               <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
-              (keyup.enter)="datatable.refresh(elasticQuery.query)" name="filtro"/>
+              (keyup.enter)="valueFiltro(elasticQuery.query)" name="filtro"/>
 
               <label>Pesquisar</label>
             </span>
@@ -14,7 +14,7 @@
         <div class="ui-g-12 ui-md-3"></div>
         <div class="ui-g-12 ui-md-6">
           <div class="ui-g-12 ui-md-6">
-            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(elasticQuery.query)"></button>
+            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="valueFiltro(elasticQuery.query)"></button>
           </div>
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Cadastrar" routerLink="/especialidade/new" icon="ui-icon-add"></button>
@@ -27,7 +27,7 @@
           <p-column header="Descrição da Especialidade" field="descricao"></p-column>
         </basis-datatable>
         <div class="ui-g-12 ui-md-2">
-          <app-botoes-exportacao resourceName="especialidade" [query]="elasticQuery.value">
+          <app-botoes-exportacao resourceName="especialidade" [query]="valueFiltroCampo">
           </app-botoes-exportacao>
       </div>
       </div>
