--- a/frontend/src/app/usuario/usuario.component.html
+++ b/frontend/src/app/usuario/usuario.component.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="ui-g-12 ui-md-3"></div>
-                <basis-datatable [url]="searchUrl" (buttonClick)="datatableClick($event)" #datatable>
+                <basis-datatable [url]="searchUrl" (buttonClick)="datatableClick($event)" #datatable [rows]="10" [rowsPerPageOptions]="[5,10,20,30,40,50]">
                     <p-column header="Nome" field="nome"></p-column>
                     <p-column header="Login" field="login"></p-column>
                     <p-column header="Email" field="email"></p-column>
