--- a/frontend/src/app/pre-cadastro/pre-cadastro-form.component.html
+++ b/frontend/src/app/pre-cadastro/pre-cadastro-form.component.html
@@ -7,7 +7,7 @@
                     <input type="hidden" name="id" pInputText [(ngModel)]="preCadastro.id" readonly/>
                     <div class="ui-g-12 ui-md-6">
                         <span class="md-inputfield">
-              <input type="text" name="nome_do_paciente" required [(ngModel)]="preCadastro.nomeDoPaciente" pInputText/>
+              <input type="text" name="nome_do_paciente" [(ngModel)]="preCadastro.nomeDoPaciente" pInputText/>
               <label>Nome Do Paciente *</label>
             </span>
                     </div>
@@ -19,13 +19,13 @@
                     </div>
                     <div class="ui-g-12 ui-md-6">
                         <span class="md-inputfield">
-              <input type="text" name="nome_da_mae" required [(ngModel)]="preCadastro.nomeDaMae" pInputText/>
+              <input type="text" name="nome_da_mae" [(ngModel)]="preCadastro.nomeDaMae" pInputText/>
               <label>Nome Da Mãe *</label>
             </span>
                     </div>
                     <div class="ui-g-12 ui-md-6">
                         <span class="md-inputfield">
-              <p-calendar name="data_de_nascimento" required [(ngModel)]="preCadastro.dataDeNascimento" dateFormat="dd/mm/yy"></p-calendar>
+              <p-calendar name="data_de_nascimento" [(ngModel)]="preCadastro.dataDeNascimento" dateFormat="dd/mm/yy"></p-calendar>
               <label>Data De Nascimento *</label>
             </span>
                     </div>
