--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar-detail.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar-detail.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g ui-fluid" *ngIf="unidadeHospitalar">
   <div class="ui-g-12">
     <div class="card card-w-title">
-      <h1>Visualizar Unidade Hospitalar</h1>
+      <h1>Visualizar Unidade de Saúde</h1>
       <div class="ui-g form-group">
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
@@ -30,7 +30,7 @@
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <input type="text" name="endereco" pInputText [ngModel]="unidadeHospitalar.endereco" readonly/>
-            <label>Endereco</label>
+            <label>Endereço</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
