--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -7,26 +7,26 @@
           <input type="hidden" name="id" pInputText [(ngModel)]="usuario.id" readonly/>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="nome" [(ngModel)]="usuario.nome" pInputText required/>
-              <label>Nome*</label>
+              <input type="text" name="nome" [(ngModel)]="usuario.nome" pInputText/>
+              <label>Nome *</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="login" [(ngModel)]="usuario.login" pInputText required minlength="1"/>
-              <label>Login*</label>
+              <input type="text" name="login" [(ngModel)]="usuario.login" pInputText minlength="1"/>
+              <label>Login *</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="password" name="senha" [(ngModel)]="usuario.senha" pInputText required minlength="4"/>
-              <label>Senha*</label>
+              <input type="password" name="senha" [(ngModel)]="usuario.senha" pInputText minlength="4"/>
+              <label>Senha *</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="email" name="email" [(ngModel)]="usuario.email" pInputText required minlength="3"/>
-              <label>Email*</label>
+              <input type="email" name="email" [(ngModel)]="usuario.email" pInputText minlength="3"/>
+              <label>Email *</label>
             </span>
           </div>
           <!-- <div class="ui-g-12 ui-md-6">
@@ -41,23 +41,23 @@
                   <label>Ativo</label>
               </div>
               <div class="ui-g-12 ui-md-2">
-                <p-radioButton name="ativo" [value]="true" label="Sim"></p-radioButton>
+                <p-radioButton name="ativo" [value]="true" label="Sim" [(ngModel)]="usuario.ativo"></p-radioButton>
               </div>
               <div class="ui-g-12 ui-md-2">
-                <p-radioButton name="ativo" [value]="false" label="Não"></p-radioButton>
+                <p-radioButton name="ativo" [value]="false" label="Não" [(ngModel)]="usuario.ativo"></p-radioButton>
               </div>
             </div>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
               <input type="multiSelect" name="perfil" [(ngModel)]="usuario.perfil" pInputText/>
-              <label>Perfil*</label>
+              <label>Perfil *</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="unidadeDeSaude" [(ngModel)]="usuario.unidadeDeSaude" pInputText required/>
-              <label>Unidade De Saude*</label>
+              <input type="text" name="unidadeDeSaude" [(ngModel)]="usuario.unidadeDeSaude" pInputText/>
+              <label>Unidade De Saude *</label>
             </span>
           </div>
         </div>
