--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
@@ -2,7 +2,7 @@
   <div class="ui-g-12">
     <div class="card card-w-title">
       <h1>{{ unidadeHospitalar.id ? 'Editar Unidade de Saúde' : 'Cadastrar Unidade de Saúde' }}</h1>
-      <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+      <form [formGroup]="rForm" name="editForm" role="form" novalidate (ngSubmit)="save(rForm.value)" #editForm="ngForm">
         <div class="ui-g form-group">
           <input type="hidden" name="id" pInputText [(ngModel)]="unidadeHospitalar.id" readonly/>
      
@@ -26,26 +26,27 @@
           <div class="ui-g-12 ui-md-6"></div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="sigla" [(ngModel)]="unidadeHospitalar.sigla" pInputText maxlength="10"/>
+              <input type="text" name="sigla" formControlName="siglaValid" [(ngModel)]="unidadeHospitalar.sigla" pInputText maxlength="10"/>
               <label>Sigla *</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="nome" [(ngModel)]="unidadeHospitalar.nome" pInputText maxlength="100"/>
+              <input type="text" name="nome" formControlName="nomeValid" [(ngModel)]="unidadeHospitalar.nome" pInputText maxlength="100"/>
               <label>Nome *</label>
+              <div class="alert" *ngIf="!rForm.controls['nomeValid'].valid && rForm.controls['nomeValid'].touched">{{ titleAlert }}</div>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="cnpj" [(ngModel)]="unidadeHospitalar.cnpj" pInputText maxlength="18" 
+              <input type="text" name="cnpj" formControlName="cnpjValid" [(ngModel)]="unidadeHospitalar.cnpj" pInputText maxlength="18" 
               minlength="14" mask="99.999.999/9999-99" pattern="[0-9]+$" />
               <label>CNPJ *</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="endereco" [(ngModel)]="unidadeHospitalar.endereco" pInputText maxlength="200"/>
+              <input type="text" name="endereco" formControlName="enderecoValid" [(ngModel)]="unidadeHospitalar.endereco" pInputText maxlength="200"/>
               <label>Endereço *</label>
             </span>
           </div>
@@ -68,7 +69,7 @@
             <button pButton type="button" label="Cancelar" routerLink="/unidadeHospitalar"></button>
           </div>
           <div class="ui-g-12 ui-md-2">
-            <button pButton type="submit" label="Salvar" [disabled]="editForm.form.invalid || isSaving" ></button>
+            <button pButton type="submit" label="Salvar" [disabled]="isSaving" ></button>
           </div>
   
         </div>
