--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
@@ -2,7 +2,7 @@
   <div class="ui-g-12">
     <div class="card card-w-title">
       <h1>{{ unidadeHospitalar.id ? 'Editar Unidade de Saúde' : 'Cadastrar Unidade de Saúde' }}</h1>
-      <form [formGroup]="rForm" name="editForm" role="form" novalidate (ngSubmit)="save(rForm.value)" #editForm="ngForm">
+      <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
         <div class="ui-g form-group">
           <input type="hidden" name="id" pInputText [(ngModel)]="unidadeHospitalar.id" readonly/>
      
@@ -26,28 +26,39 @@
           <div class="ui-g-12 ui-md-6"></div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="sigla" formControlName="siglaValid" [(ngModel)]="unidadeHospitalar.sigla" pInputText maxlength="10"/>
+              <input type="text" name="sigla" [(ngModel)]="unidadeHospitalar.sigla" pInputText maxlength="10" required/>
               <label>Sigla *</label>
+              <div *ngIf="editForm.controls['sigla'] && !editForm.controls['sigla'].valid && (editForm.controls['sigla'].touched || editForm.submitted)" class="ui-message ui-messages-error">
+                Campo obrigatório!
+              </div>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="nome" formControlName="nomeValid" [(ngModel)]="unidadeHospitalar.nome" pInputText maxlength="100"/>
+              <input type="text" name="nome" [(ngModel)]="unidadeHospitalar.nome" pInputText maxlength="100" required/>
               <label>Nome *</label>
-              <div class="alert" *ngIf="!rForm.controls['nomeValid'].valid && rForm.controls['nomeValid'].touched">{{ titleAlert }}</div>
+              <div *ngIf="editForm.controls['nome'] && !editForm.controls['nome'].valid && (editForm.controls['nome'].touched || editForm.submitted)" class="ui-message ui-messages-error">
+                Campo obrigatório!
+              </div>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="cnpj" formControlName="cnpjValid" [(ngModel)]="unidadeHospitalar.cnpj" pInputText maxlength="18" 
-              minlength="14" mask="99.999.999/9999-99" pattern="[0-9]+$" />
+              <input type="text" name="cnpj" [(ngModel)]="unidadeHospitalar.cnpj" pInputText maxlength="18" 
+              minlength="14" mask="99.999.999/9999-99" pattern="[0-9]+$" required/>
               <label>CNPJ *</label>
+              <div *ngIf="editForm.controls['cnpj'] && !editForm.controls['cnpj'].valid && (editForm.controls['cnpj'].touched || editForm.submitted)" class="ui-message ui-messages-error">
+                Campo obrigatório!
+              </div>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="endereco" formControlName="enderecoValid" [(ngModel)]="unidadeHospitalar.endereco" pInputText maxlength="200"/>
+              <input type="text" name="endereco" [(ngModel)]="unidadeHospitalar.endereco" pInputText maxlength="200" required/>
               <label>Endereço *</label>
+              <div *ngIf="editForm.controls['endereco'] && !editForm.controls['endereco'].valid && (editForm.controls['endereco'].touched || editForm.submitted)" class="ui-message ui-messages-error">
+                Campo obrigatório!
+              </div>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
