--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar-detail.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar-detail.component.html
@@ -3,7 +3,7 @@
     <div class="card card-w-title">
       <h1>Visualizar Unidade de Saúde</h1>
       <div class="ui-g form-group">
-        <div class="ui-g-12 ui-md-12">
+        <div class="ui-g-12 ui-md-12" *ngIf="unidadeHospitalar.logoContentType != null">
           <span class="md-inputfield">
             <img src="data:{{unidadeHospitalar.logoContentType}};base64,{{unidadeHospitalar.logo}}" style="max-width: 150px; max-height: 150px;">
             <label></label>
