--- a/frontend/src/app/especialidade/especialidade-detail.component.html
+++ b/frontend/src/app/especialidade/especialidade-detail.component.html
@@ -10,9 +10,9 @@
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
-          <span class="md-inputfield">
-            <input type="text" name="descricao" pInputText [ngModel]="especialidade.descricao" readonly/>
-            <label>Descrição da Especialidade</label>
+          <span class="md-inputfield"> 
+            <label>Descrição da Especialidade</label> <br>
+            <textarea [rows]="12" [cols]="67" name="descricao"  pInputTextarea [ngModel]="especialidade.descricao" maxlength="250" readonly></textarea>
           </span>
         </div>
       </div>
